--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-This file was created by IntelliJ IDEA 11.0.2 for binding GitHub repository
-This file was modified by IntelliJ IDEA 11.0.2 for binding GitHub repository
-This file was modified by IntelliJ IDEA 11.0.2 for binding GitHub repository
-This file was modified by IntelliJ IDEA 11.0.2 for binding GitHub repository
+Runescape Client with full Plugin (Widget) support and overlay painting.
